# BSUIR

./: .gitignore  CMakeLists.txt  LICENSE  Laba 4.1 works.cpp  Laba 4.2.cpp  Laba 4.3.cpp  README.md  makefile  readme.md  sonar-project.properties  Лаба 1.1.cpp  Лаба 1.2.cpp  Лаба 1.4.cpp  Лаба 2.1.cpp  Лаба 2.2.cpp  Лаба 2.3.cpp  Лаба 3.1.cpp  Лаба 3.2.cpp  Лаба 3.3.cpp  Лаба1.3.cpp
.github/workflows/: build.yml  codeql.yml
1st course/kursach/: README
1st semestr/: physics
1st semestr/kursach/: README  Моя.docx
2semester/1Lab/: CMakeLists.txt  Hurra_Die_Weit_Geht_Unter.c
3semestr/Lab1_test/: LinkedList.cpp  LinkedList.h  func.cpp  func.h  matrix.cpp  matrix.h
3semestr/Lab2/: CMakeLists.txt  parallelepiped.cpp  parallelepiped.h
3semestr/Lab2_++/: main.cpp
3semestr/Lab3/: administrator.cpp  administrator.h  developer.cpp  developer.h  director.cpp  director.h  manager.cpp  manager.h  name.cpp  name.h  product.cpp  product.h  sting.cpp  sting.h  task_time.cpp  task_time.h  tester.cpp  tester.h  (+2 more)
4st semestr/OSiSP/PATSIUPIN_OSiSP_prj_2024/back_sfc/: CMakeLists.txt
4st semestr/OSiSP/PATSIUPIN_OSiSP_prj_2024/back_sfc/src/: main.cpp
4st semestr/OSiSP/PATSIUPIN_OSiSP_prj_2024/back_sfc/src/configuration/: chek_conf_file.cpp
4st semestr/OSiSP/PATSIUPIN_OSiSP_prj_2024/back_sfc/src/daemon/: deamon_works.cpp
4st semestr/OSiSP/PATSIUPIN_OSiSP_prj_2024/back_sfc/src/other/: logger.cpp  notification.cpp
4st semestr/OSiSP/PATSIUPIN_OSiSP_prj_2024/back_sfc/src/proc/: backup.cpp  hash.cpp  main_proc.cpp  main_proc.h
4st semestr/OSiSP/PATSIUPIN_OSiSP_prj_2024/front/: CMakeLists.txt  config.cpp  config.h  main.cpp  menu.cpp  menu.h  readme
4st semestr/OSiSP/PATSIUPIN_OSiSP_prj_2024/front/course_03/: CMakeLists.txt  config.cpp  config.h  menu.cpp  menu.h  menu_func.cpp  menu_func.h
4st semestr/OSiSP/PATSIUPIN_OSiSP_prj_2024/front/front_sfc/: CMakeLists.txt  menu.h
Asm_C_APC/: readme.md
C labs_project old/: readme.md
C++ labs/: readme.md
CUDA/: readme.md
Digital design/: readme.md
EP/: 3-4.docx  README.TXT  лаба эп6.docx  эп лаба 5 тутуту.docx
English/: README  Shpory_temki.docx  Topics for English Exam (IT).docx  реферирование.docx
Java_Android_IoT/: build.gradle  google-services.json
Mathematical statistics/: 10_1.py  10_2.py  10_3_4.py  250503_Патюпин_М_С.docx  9_2.py  9_3.py  9_3_table.py  9_4.py  9_4_table.py  9_5.py  9_6.py  9_7.py  9_77.py  readme.md
Publication/: readme.md
Py_Networks(oks)/: readme.md  Отчет ЛР3 ОКС.docx
Qt app_student_calculator/: README
SQL_DataBases/: readme.md
iiyvm(Windous_c++)/: readme.md
src/: list.h  ring.h
vhdil-APDD/: readme.md
Аrithmetic and logical foundations of computer technology/: readme.md
С_system_programming_labs (Linux)/: readme.md
С_system_programming_project (Linux)/: readme.md
(+750 files in other folders)
